Sync OSM data types from KOSMIndoorMap

Among other things this removes a too aggressive operator overload that
can cause build issues.

BUG: 497034
(cherry picked from commit 66422b8ffee43fc4bf32bdb6beb833eb0b2af5be)